# tx-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: agent-self-test.yml
configs/: business_acceptance.json  integration.json  metrics.json  scheduler_policy.json
docs/: current_engineering_state.md  evidence_business_trace.json  evidence_case2_convert.json  evidence_ci_gate.json  evidence_mixed_automation.json  evidence_review_queue.json  external_substitute_acceptance.md  final_submission_report.md  yuanbao_gui_agent_testing_platform.md
docs/prd/: external_demo_prd.md
src/yuanbao_agent_platform/: __init__.py  acceptance.py  adapters.py  agents.py  api.py  cli.py  config.py  demo_web.py  executors.py  external_acceptance.py  external_adapters.py  integrations.py  knowledge.py  llm.py  metrics.py  models.py  platform.py  scheduler.py  storage.py  vlm.py
tests/: test_api.py  test_external_acceptance.py  test_platform.py
