[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yuanbao-agent-platform"
version = "0.1.0"
description = "Vision-based GUI Agent testing platform MVP for Yuanbao."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
yuanbao-agent-demo = "yuanbao_agent_platform.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
